--- a/themes/stun/_config.yml
+++ b/themes/stun/_config.yml
@@ -484,7 +484,7 @@ canvas_ribbon:
 # Canvas-nest
 # Dependencies: https://github.com/hustcc/canvas-nest.js
 canvas_nest:
-  enable: false
+  enable: true
   # Display on mobile or not
   onmobile: true
   # RGB values, use ',' to separate
